allows for configurale copyright message and credits

--- a/webgl-oneclick/model.html
+++ b/webgl-oneclick/model.html
@@ -8,7 +8,11 @@
 	</head>
 
 	<body>
-		<div id="info">%(modelname)s</div>
+		<div id="info">
+			<div id="credits">Credits<br />%(credits)s</div>
+			<div id="modelinfo">Modelname: %(modelname)s<br />%(copyright)s</div>
+			<div id="instructions">Use mousebuttons to navigate</div>
+		</div>
 
 		<script type="module">
 
